--- a/packages/fluent/scss/colorgradient/_variables.scss
+++ b/packages/fluent/scss/colorgradient/_variables.scss
@@ -2,151 +2,151 @@
 @use "sass:math";
 @use "../core/" as *;
 
-/// Spacer of the color gradient.
+/// The spacer of the ColorGradient.
 /// @group cologradient
 $kendo-color-gradient-spacer: map.get( $kendo-spacing, 4 ) !default;
 
-/// Default width of the color gradient.
+/// The width of the ColorGradient.
 /// @group cologradient
 $kendo-color-gradient-width: 260px !default;
-/// Border width of the color gradient.
+/// The width of the border around the ColorGradient.
 /// @group cologradient
 $kendo-color-gradient-border-width: 1px !default;
-/// Border radius of the color gradient.
+/// The border radius of the ColorGradient.
 /// @group cologradient
 $kendo-color-gradient-border-radius: var( --kendo-border-radius-md, 0 ) !default;
-/// Vertical padding of the color gradient.
+/// The vertical padding of the ColorGradient.
 /// @group cologradient
 $kendo-color-gradient-padding-y: $kendo-color-gradient-spacer !default;
-/// Horizontal padding of the color gradient.
+/// The horizontal padding of the ColorGradient.
 /// @group cologradient
 $kendo-color-gradient-padding-x: math.div( $kendo-color-gradient-spacer, 2 ) !default;
-/// Spacing of the color gradient.
+/// The spacing between the sections of the ColorGradient.
 /// @group cologradient
 $kendo-color-gradient-spacing: $kendo-color-gradient-spacer !default;
-/// Font family of the color gradient.
+/// The font family of the ColorGradient.
 /// @group cologradient
 $kendo-color-gradient-font-family: var( --kendo-font-family, inherit ) !default;
-/// Font size of the color gradient.
+/// The font size of the ColorGradient.
 /// @group cologradient
 $kendo-color-gradient-font-size: var( --kendo-font-size, inherit ) !default;
-/// Line height of the color gradient.
+/// The line height of the ColorGradient.
 /// @group cologradient
 $kendo-color-gradient-line-height: var( --kendo-line-height, normal ) !default;
 
-/// Background color of the color gradient.
-/// @group cologradient
-$kendo-color-gradient-bg: var( --kendo-component-bg, initial ) !default;
-/// Text color of the color gradient.
+/// The text color of the ColorGradient.
 /// @group cologradient
 $kendo-color-gradient-text: var( --kendo-component-text, initial ) !default;
-/// Border color of the color gradient.
+/// The background color of the ColorGradient.
+/// @group cologradient
+$kendo-color-gradient-bg: var( --kendo-component-bg, initial ) !default;
+/// The border color of the ColorGradient.
 /// @group cologradient
 $kendo-color-gradient-border: var( --kendo-component-border, initial ) !default;
-/// Shadow of the color gradient.
+/// The box shadow of the ColorGradient.
 /// @group cologradient
 $kendo-color-gradient-shadow: var( --kendo-box-shadow-depth-2, none ) !default;
 
-/// Focus border of the color gradient.
+/// The border color of the focused ColorGradient.
 /// @group cologradient
 $kendo-color-gradient-focus-border: get-theme-color-var( neutral-20 ) !default;
-/// Focus shadow of the color gradient.
+/// The box shadow of the focused ColorGradient.
 /// @group cologradient
 $kendo-color-gradient-focus-shadow: var( --kendo-box-shadow-depth-3, none ) !default;
 
-/// Border radius of the color gradient canvas.
-/// @group cologradient
-$kendo-color-gradient-canvas-border-radius: var( --kendo-border-radius-md, 0 ) !default;
-/// Border width of the color gradient canvas.
+/// The width of the border around the ColorGradient canvas.
 /// @group cologradient
 $kendo-color-gradient-canvas-border-width: 0 !default;
-/// Spacing of the color gradient canvas.
+/// The border radius of the ColorGradient canvas.
+/// @group cologradient
+$kendo-color-gradient-canvas-border-radius: var( --kendo-border-radius-md, 0 ) !default;
+/// The spacing between the items of the ColorGradient canvas.
 /// @group cologradient
 $kendo-color-gradient-canvas-spacing: math.div( $kendo-color-gradient-spacer, 2 ) !default;
-/// Height the color gradient canvas hsv rectangle.
+/// The height the ColorGradient canvas hsv rectangle.
 /// @group cologradient
 $kendo-color-gradient-canvas-rectangle-height: 180px !default;
-/// Border color of the color gradient canvas hsv rectangle.
+/// The border color of the ColorGradient canvas hsv rectangle.
 /// @group cologradient
 $kendo-color-gradient-canvas-rectangle-border: get-theme-color-var( neutral-30 ) !default;
-/// Shadow of the color gradient canvas draghandle.
+/// The box shadow of the ColorGradient canvas drag handle.
 /// @group cologradient
 $kendo-color-gradient-canvas-draghandle-shadow: 0px 0.6px 1.8px rgba(0, 0, 0, 0.1), 0px 3.2px 7.2px rgba(0, 0, 0, 0.13), inset 0px 0px 0px 3px #FFFFFF !default;
 
-/// Default input width of the color gradient.
-/// @group cologradient
-$kendo-color-gradient-input-width: 48px !default;
-/// Input spacing of the color gradient.
-/// @group cologradient
-$kendo-color-gradient-input-spacing: math.div( $kendo-color-gradient-spacer, 4 ) !default;
-/// Input label font size of the color gradient.
-/// @group cologradient
-$kendo-color-gradient-input-label-font-size: var( --kendo-font-size-sm, inherit ) !default;
-/// Input label spacing of the color gradient.
-/// @group cologradient
-$kendo-color-gradient-input-label-spacing: math.div( $kendo-color-gradient-spacer, 4 ) !default;
-/// Input label text color of the color gradient.
-/// @group cologradient
-$kendo-color-gradient-input-label-text: var( --kendo-subtle-text, inherit ) !default;
-
-/// Font weight of the color gradient contrast ratio text.
-/// @group cologradient
-$kendo-color-gradient-contrast-ratio-font-weight: var( --kendo-font-weight-bold, normal ) !default;
-/// Spacing of the color gradient contrast tool.
-/// @group cologradient
-$kendo-color-gradient-contrast-spacing: math.div( $kendo-color-gradient-spacer, 1.5 ) !default;
-
-/// The size of the color gradient slider.
+/// The width of the ColorGradient slider.
 /// @group cologradient
 $kendo-color-gradient-slider-track-size: 20px !default;
-/// Border radius of the color gradient slider.
+/// The border radius of the ColorGradient slider.
 /// @group cologradient
 $kendo-color-gradient-slider-border-radius: var( --kendo-border-radius-md, 0 ) !default;
-/// Border width of the color gradient slider.
+/// The width of the border around the ColorGradient slider.
 /// @group cologradient
 $kendo-color-gradient-slider-border-width: 1px !default;
-/// Border color of the color gradient slider.
+/// The color of the border around the ColorGradient slider.
 /// @group cologradient
 $kendo-color-gradient-slider-border: get-theme-color-var( neutral-30 ) !default;
 
-/// Height of the color gradient vertical slider.
+/// The height of the ColorGradient vertical slider.
 /// @group cologradient
 $kendo-color-gradient-slider-vertical-size: 180px !default;
-/// Width of the color gradient horizontal slider.
+/// The width of the ColorGradient horizontal slider.
 /// @group cologradient
 $kendo-color-gradient-slider-horizontal-size: 100% !default;
-/// Background image of the color gradient alpha slider.
+/// The background image of the ColorGradient alpha slider.
 /// @group cologradient
 $kendo-color-gradient-slider-alpha-bgr: "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAACXBIWXMAAAsTAAALEwEAmpwYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAuSURBVHgBxYyxDQAwDMJIL+YT+DjtzFRliUfLcklqBCRT4eCTxbD6kdL2/LgYXqpvCbs3kBv/AAAAAElFTkSuQmCC" !default;
 
-/// Width of the color gradient draghandle.
+/// The width of the ColorGradient canvas drag handle.
 /// @group cologradient
 $kendo-color-gradient-draghandle-width: 20px !default;
-/// Height of the color gradient draghandle.
+/// The height of the ColorGradient canvas drag handle.
 /// @group cologradient
 $kendo-color-gradient-draghandle-height: 20px !default;
-/// Border width of the color gradient draghandle.
+/// The width of the border around the ColorGradient canvas drag handle.
 /// @group cologradient
 $kendo-color-gradient-draghandle-border-width: 1px !default;
-/// Border color of the color gradient draghandle.
+/// The color of the border around the ColorGradient canvas drag handle.
 /// @group cologradient
 $kendo-color-gradient-draghandle-border: get-theme-color-var( neutral-110 ) !default;
-/// Shadow of the color gradient draghandle.
+/// The box shadow of the ColorGradient canvas drag handle.
 /// @group cologradient
 $kendo-color-gradient-draghandle-shadow: var( --kendo-box-shadow-depth-2, none ) !default;
-/// Focus shadow of the color gradient draghandle.
-/// @group cologradient
-$kendo-color-gradient-draghandle-focus-shadow: $kendo-color-gradient-draghandle-shadow !default;
-/// Focus border color of the color gradient draghandle.
+/// The color of the border around the focused ColorGradient canvas drag handle.
 /// @group cologradient
 $kendo-color-gradient-draghandle-focus-border: get-theme-color-var( neutral-160 ) !default;
-/// Hover shadow of the color gradient draghandle.
+/// The box shadow of the focused ColorGradient canvas drag handle.
+/// @group cologradient
+$kendo-color-gradient-draghandle-focus-shadow: $kendo-color-gradient-draghandle-shadow !default;
+/// The box shadow of the hovered ColorGradient canvas drag handle.
 /// @group cologradient
 $kendo-color-gradient-draghandle-hover-shadow: $kendo-color-gradient-draghandle-focus-shadow !default;
 
-/// Vertical offset of the color gradient canvas draghandle.
+/// The vertical offset of the ColorGradient canvas drag handle.
 /// @group cologradient
 $kendo-color-gradient-canvas-draghandle-offset-y: ( -1 * math.div( $kendo-color-gradient-draghandle-height, 2 ) ) !default;
-/// Horizontal offset of the color gradient canvas draghandle.
+/// The horizontal offset of the ColorGradient canvas drag handle.
 /// @group cologradient
 $kendo-color-gradient-canvas-draghandle-offset-x: ( -1 * math.div( $kendo-color-gradient-draghandle-width, 2 ) ) !default;
+
+/// The width of the ColorGradient input.
+/// @group cologradient
+$kendo-color-gradient-input-width: 48px !default;
+/// The spacing between the ColorGradient inputs.
+/// @group cologradient
+$kendo-color-gradient-input-spacing: math.div( $kendo-color-gradient-spacer, 4 ) !default;
+/// The font size of the ColorGradient input labels.
+/// @group cologradient
+$kendo-color-gradient-input-label-font-size: var( --kendo-font-size-sm, inherit ) !default;
+/// The spacing between the ColorGradient inputs and their labels.
+/// @group cologradient
+$kendo-color-gradient-input-label-spacing: math.div( $kendo-color-gradient-spacer, 4 ) !default;
+/// The text color of the ColorGradient input labels.
+/// @group cologradient
+$kendo-color-gradient-input-label-text: var( --kendo-subtle-text, inherit ) !default;
+
+/// The font weight of the ColorGradient contrast ratio text.
+/// @group cologradient
+$kendo-color-gradient-contrast-ratio-font-weight: var( --kendo-font-weight-bold, normal ) !default;
+/// The spacing between the items in the ColorGradient contrast tool.
+/// @group cologradient
+$kendo-color-gradient-contrast-spacing: math.div( $kendo-color-gradient-spacer, 1.5 ) !default;
