--- a/packages/bootstrap/scss/list/_variables.scss
+++ b/packages/bootstrap/scss/list/_variables.scss
@@ -52,7 +52,7 @@ $kendo-list-lg-header-line-height: null !default;
 
 /// The font weight of the List header.
 /// @group list
-$kendo-list-header-font-weight: bold !default;
+$kendo-list-header-font-weight: $kendo-font-weight-bold !default;
 
 /// The horizontal padding of the List items, when no size is set.
 /// @group list
@@ -116,7 +116,7 @@ $kendo-list-lg-group-item-line-height: null !default;
 
 /// The font weight of a List group item.
 /// @group list
-$kendo-list-group-item-font-weight: bold !default;
+$kendo-list-group-item-font-weight: $kendo-font-weight-bold !default;
 
 
 /// The map with the sizes of the List.
